svc-pmt.yaml
apiVersion: v1
kind: Service
metadata:
 creationTimestamp: null
 labels:
   app: prometheus-mon
 name: prometheus-mon
spec:
 ports:
 - name: web
   port: 9090
   protocol: TCP
   targetPort: 9090
 selector:
   app: prometheus-mon
 sessionAffinity: None
 type: ClusterIP
status:
 loadBalancer: {}
