route-pmt.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
 creationTimestamp: null
 labels:
   app: prometheus-mon
 name: open-prometheus
spec:
 host: appname-nvidia-monitoring.prd.zonedns
 port:
   targetPort: web
 tls:
   termination: edge
 to:
   kind: Service
   name: prometheus-mon
   weight: 100
 wildcardPolicy: None
status:
 ingress: null
