route-pt.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
 creationTimestamp: null
 labels:
   app: prometheus-mon
 name: open-prometheus
spec:
 host: open-prometheus-openbanking-monitoring-prometheus.prd.ocp.capgv.intra.bnb
 port:
   targetPort: web
 tls:
   termination: edge
 to:
   kind: Service
   name: prometheus-mon
   weight: 100
 wildcardPolicy: None
status:
 ingress: null
